// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hint renders RTL styling 1`] = `
<div
  className="Hint-gklniA c-chk__hint is-rtl nhFXS"
  data-garden-id="checkboxes.hint"
  data-garden-version="version"
/>
`;

exports[`Hint renders default styling 1`] = `
<div
  className="Hint-gklniA c-chk__hint nhFXS"
  data-garden-id="checkboxes.hint"
  data-garden-version="version"
/>
`;
